<resources>
    <string name="app_name">MarketPlace</string>
    <string name="hello">Hello World!</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_transaction">Transaction</string>
    <string name="title_notifications">Notifications</string>
    <string name="cari_produk_disini">Cari produk disini</string>
    <string name="buka_toko_gratis">Buka Toko Gratis</string>
    <string name="mau_mulai_berbisnis">Mau Mulai Berbisnis?</string>
    <string name="pilih_alamat">Pilih Alamat</string>
    <string name="tidak_ada_data">Tidak ada data</string>
    <string name="alamat">Alamat</string>
    <string name="label_lokasi">Label Lokasi</string>
    <string name="alamat_toko">Alamat Toko</string>
    <string name="kode_pos">Kode pos</string>
    <string name="email">Email</string>
    <string name="no_telepon">No Telepon</string>

    <string name="foto_produk">Foto produk</string>
    <string name="star">*</string>
    <string name="tambah_foto">Tambah Foto</string>
    <string name="isi_nama_produk_yang_kamu_jual">Isi nama produk yang kamu jual</string>
    <string name="nama">Nama</string>
    <string name="tips">Tips: Jenis Produk + Keterangan Tambahan</string>
    <string name="tips_harga">Tips: Tentukan harga sesuai pasaran produkmu</string>
    <string name="harga_produk">Harga Produk</string>
    <string name="stok">Stok</string>
    <string name="kategori">Kategori</string>
    <string name="pilih_kategori">Pilih kategori</string>
    <string name="harga">Harga</string>
    <string name="rp_">Rp.</string>
    <string name="_1">1</string>
    <string name="_500">500</string>
    <string name="gr">gr</string>
    <string name="discount">Discount</string>
    <string name="diskon">Diskon</string>
    <string name="persen">%</string>
    <string name="deskripsi_produk_kamu">Deskripsi produk kamu</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="grosir">Grosir</string>
    <string name="jumlah_minimal">Jumlah Minimal</string>
    <string name="harga_grosir">Harga Grosir</string>
    <string name="varian">Varian</string>
    <string name="ubah">Ubah</string>
    <string name="tambah_varian_agar_pembeli_mudah_memilih">Tambah varian agar pembeli mudah memilih</string>
    <string name="tambah_varian">Tambah Varian</string>
    <string name="produk">Produk</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="daftar_produk">Daftar Produk</string>
    <string name="_1_produk">1 produk</string>
    <string name="title">Title</string>
    <string name="rp_0">Rp.0</string>
    <string name="hapus">Hapus</string>
    <string name="category">Category</string>
    <string name="pengaturan_produk">Pengaturan produk</string>
    <string name="slider">Slider</string>
    <string name="rp10_000">Rp10.000</string>
    <string name="detail_produk">Detail Produk</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="keranjang">Keranjang</string>
    <string name="beli_sekarang">Beli Sekarang</string>
</resources>

