<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.inyongtisto.marketplace.ui.navigation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.inyongtisto.marketplace.ui.navigation.transaction.TransactionFragment"
        android:label="@string/title_transaction"
        tools:layout="@layout/fragment_transaction" />

    <fragment
        android:id="@+id/navigation_keranjang"
        android:name="com.inyongtisto.marketplace.ui.navigation.cart.CartFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_akun" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.inyongtisto.marketplace.ui.navigation.account.AccountFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_cart" />


</navigation>