<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ly_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_5sdp">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_vertical"
            android:scaleType="centerCrop"
            android:src="@drawable/asset_product" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@color/dark"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_harga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/rp_0"
                android:textColor="@color/gray2"
                android:textSize="@dimen/_9sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/stok"
                    android:textColor="@color/gray2"
                    android:textSize="@dimen/_9sdp" />

                <TextView
                    android:id="@+id/tv_stok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3sdp"
                    android:text="@string/_1"
                    android:textColor="@color/dark"
                    android:textSize="@dimen/_9sdp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_3sdp"
            app:cardElevation="0dp"
            app:strokeColor="@color/gray4"
            app:strokeWidth="0.5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/ubah"
                android:textSize="@dimen/_9sdp" />


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_3sdp"
            app:cardElevation="0dp"
            app:strokeColor="@color/gray4"
            app:strokeWidth="0.5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_5sdp"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/hapus"
                android:textSize="@dimen/_9sdp" />

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_5sdp"
        android:background="@color/gray5" />

</LinearLayout>