<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.akun.AkunFragment">

    <include
        android:id="@+id/ly_toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:text="@string/pengaturan_produk"
            android:textAppearance="@style/TypographyStyles.Text2.Bold"
            android:textColor="@color/gray1" />

        <LinearLayout
            android:id="@+id/btn_category"
            style="@style/layout_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_6sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_placeholder"
                app:tint="@color/gray3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/category"
                android:textAppearance="@style/TypographyStyles.Text2"
                android:textColor="@color/gray2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btn_slider"
            style="@style/layout_clickable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/_15sdp"
            android:paddingVertical="@dimen/_6sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_16sdp"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_placeholder"
                app:tint="@color/gray3" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/slider"
                android:textAppearance="@style/TypographyStyles.Text2"
                android:textColor="@color/gray2" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>